user-service/src/main/java/com/example/userservice/utils/exceptions/errors/UserAlreadyUpdatedException.java
package com.example.userservice.utils.exceptions.errors;

public class UserAlreadyUpdatedException {
}
